some working and notes