@@ -3,30 +3,50 @@ package org.aktin.scripts;
 import org.aktin.Preferences;
 import org.aktin.dwh.PreferenceKey;
 
+import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
+import javax.annotation.Resource;
+import javax.enterprise.concurrent.ManagedExecutorService;
 import javax.inject.Inject;
 import javax.inject.Singleton;
 import java.io.*;
+import java.nio.file.Paths;
 import java.util.concurrent.FutureTask;
 import java.util.concurrent.LinkedBlockingQueue;
-import java.util.concurrent.ThreadPoolExecutor;
-import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+
+// TODO COMMENTS + JAVADOC
 
 @Singleton
 public class PythonScriptExecutor {
 
     private static final Logger LOGGER = Logger.getLogger(PythonScriptExecutor.class.getName());
-
+    private static final LinkedBlockingQueue QUEUE = new LinkedBlockingQueue();
     private static final String SCRIPT_KEY = "MIMETYPE";
-    private static final ThreadPoolExecutor executor = new ThreadPoolExecutor(1, 1, 0L, TimeUnit.MILLISECONDS, new LinkedBlockingQueue<>());
+
+    private PythonRunner runner;
 
     @Inject
     private Preferences prefs;
 
+    @PostConstruct
+    public void startup() {
+        runner = new PythonRunner();
+
+        // TODO init queue
+
+        new Thread(runner).start();
+    }
+
+    @PreDestroy
+    public void shutdown() {
+        runner.terminate();
+    }
+
     public boolean addTask(String path_file, String name_script, String method_script) throws IOException {
             if (doesContentTypeMatchScript(path_file, name_script)) {
-                addTaskToQueue(path_file, name_script, method_script);
+                runner.submit(name_script);
                 return true;
             } else
                 return false;
@@ -44,8 +64,7 @@ public class PythonScriptExecutor {
     }
 
     private boolean doesContentTypeMatchScript(String path_file, String name_script) throws IOException {
-        String path_scripts = prefs.get(PreferenceKey.importScriptPath);
-        File script = new File(path_scripts + "/" + name_script);
+        File script = new File(Paths.get(prefs.get(PreferenceKey.importScriptPath), name_script).toString());
 
         String script_value = getScriptValueByKey(script, SCRIPT_KEY);
         switch (script_value) {
@@ -53,12 +72,12 @@ public class PythonScriptExecutor {
                 int[] header_bytes_array = new int[]{0x504B0304, 0x504B0506, 0x504B0708};
                 return checkContentBytes(path_file, header_bytes_array);
             default:
-                LOGGER.log(Level.SEVERE, "doesContentTypeMatchScript(): SCRIPT_KEY has no value");
+                LOGGER.log(Level.SEVERE, "Appropriate script_value could not be found");
                 return false;  //TODO ODER LIEBER EXCEPTION?
         }
     }
 
-    private String getScriptValueByKey(File script, String script_key) throws IOException{
+    private String getScriptValueByKey(File script, String script_key) throws IOException {
         String line, key, value = null;
         try (BufferedReader br = new BufferedReader(new FileReader(script))) {
             for (int i = 0; i < 15; i++) {
@@ -89,14 +108,15 @@ public class PythonScriptExecutor {
 
         //TODO VERPACKEN FutureTask<Void> future = new FutureTask<Void(() -> { return null; }
 
-        String path_scripts = prefs.get(PreferenceKey.importScriptPath);
+        String path_script = Paths.get(prefs.get(PreferenceKey.importScriptPath), name_script).toString();
+
         boolean result = false;
 
         String s = null;
         BufferedReader stdInput = null;
         BufferedReader stdError = null;
         try {
-            Process p = Runtime.getRuntime().exec("python " + path_scripts + "/" + name_script + " " + path_file + " " + method_script);
+            Process p =  new ProcessBuilder("python", path_script, path_file, method_script).start();
 
             stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
             stdError = new BufferedReader(new InputStreamReader(p.getErrorStream()));
@@ -121,4 +141,5 @@ public class PythonScriptExecutor {
             stdError.close();
         }
     }
+
 }
